--- a/backend/views/signin.ejs
+++ b/backend/views/signin.ejs
@@ -30,6 +30,9 @@
           <div class="form-row">
             <button type="submit">Sign In</button>
           </div>
+          <div class="form-row">
+            <a href="/user/forgot-password" class="forgot-password-btn">Forgot Password?</a>
+          </div>
         </form>
         <hr />
         <div class="form-row">
@@ -56,4 +59,3 @@
       <p>&copy; <%= new Date().getFullYear() %> Booking App</p>
     </footer>
   </body>
-</html>
